[gd_scene load_steps=7 format=2]

[ext_resource path="res://Themes/PrimaryTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/PIXELFONT225.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menus/InputMapMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menus/SettingsMenu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="PauseMenuMargin" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -56.0
margin_right = 112.0
margin_bottom = 56.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuMargin"]
margin_right = 224.0
margin_bottom = 118.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="PauseMenuMargin/VBoxContainer"]
margin_right = 224.0
margin_bottom = 12.0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenuMargin/VBoxContainer"]
margin_top = 28.0
margin_right = 224.0
margin_bottom = 40.0
custom_constants/separation = 16
alignment = 1

[node name="BlueScore" type="Label" parent="PauseMenuMargin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 91.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.156863, 0.4, 0.603922, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="Dash" type="Label" parent="PauseMenuMargin/VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 117.0
margin_bottom = 12.0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "-"
align = 1

[node name="RedScore" type="Label" parent="PauseMenuMargin/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 133.0
margin_right = 157.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.807843, 0.101961, 0.101961, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuMargin/VBoxContainer"]
margin_top = 56.0
margin_right = 224.0
margin_bottom = 118.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenuMargin/VBoxContainer/CenterContainer"]
margin_left = 73.0
margin_right = 150.0
margin_bottom = 62.0
custom_constants/separation = 8
alignment = 1

[node name="ResumeBtn" type="Button" parent="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_right = 77.0
margin_bottom = 6.0
text = "Resume"

[node name="RestartBtn" type="Button" parent="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 14.0
margin_right = 77.0
margin_bottom = 20.0
text = "Restart match"

[node name="InputMapMenuBtn" type="Button" parent="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 77.0
margin_bottom = 34.0
text = "Input Map"

[node name="SettingsBtn" type="Button" parent="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 42.0
margin_right = 77.0
margin_bottom = 48.0
text = "Settings"

[node name="EndMatchBtn" type="Button" parent="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 77.0
margin_bottom = 62.0
text = "End Match"

[node name="InputMapMenu" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2/InputMapMenuBtn" to="." method="_on_InputMapMenuBtn_pressed"]
[connection signal="pressed" from="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="PauseMenuMargin/VBoxContainer/CenterContainer/VBoxContainer2/EndMatchBtn" to="." method="_on_EndMatchBtn_pressed"]
